Refactor OpenCL kernel code formatting and improve GPU diagnostics error handling
- Updated formatting of OpenCL kernel source code in MatrixOps.java for better readability.
- Modified GpuDiagnostics.java to execute GPU detection commands using a more robust method, ensuring compatibility across environments.
- Enhanced error checking in GPU readiness verification to include OpenCL runtime availability and critical error detection.